2012-04-22 Raphael Neider <rneider AT web.de>

	* device/non-free/lib/pic14/libdev/Makefile.in:
	  build 16f72[01] only if --enable-new-pics is given, as the
	  devices are not supported in the current gputils release 0.14.1

2012-04-21 Maarten Brock <sourceforge.brock AT dse.nl>

	* src/ds390/main.c: undo removed include to fix implicit declaration

2012-04-21 Philipp Klaus Krause <pkk AT spth.de>

	* src/SDCCicode.c:
	  Preparations for repalcing division by power of two by conditional addition and shift.
	* support/regression/tests/longlong.c,
	  support/regression/tests/gcc-torture-execute-pr42269-2.c,
	  support/regression/tests/gcc-torture-execute-20080529-1.c,
	  support/regression/tests/gcc-torture-execute-950503-1.c,
	  support/regression/tests/float_single.c:
	  Enable more tests for hc08.

2012-04-19 Raphael Neider <rneider AT web.de>

	* device/lib/pic16/libc/stdio/strmmssp.c:
	  fixed use of access bank vs. BSR

	* device/lib/pic16/libsdcc/gptr/eeprom{8,16}_gptr{get,put}[1234].c,
	  device/lib/pic16/libsdcc/gptr/eeprom{8,16}_write.c:
	  implement EEPROM read/write access

	* device/lib/pic16/libsdcc/gptr/gptr{get,put}[1234].c:
	  call EEPROM dispatchers on EEPROM accesses

	* device/lib/pic16/libsdcc/Makefile.am:
	  add gptr EEPROM accessors

	* device/non-free/lib/pic16/libdev/gptr/*:
	  dispatch EEPROM accesses to the appropriate implementations
	  based on device capabilities (no eeprom, 8 or 16 bit EEPROM
	  address space)

	* device/non-free/lib/pic16/libdev/mkmk.sh,
	  device/non-free/lib/pic16/libdev/newdevices.txt:
	  improved to automatically add SSPBUF workaround
	  plus EEPROM dispatchers as required by the devices

	* device/non-free/lib/pic16/libdev/pic18f1330.c,
	  device/non-free/lib/pic16/libdev/pic18f1220.c,
	  device/non-free/lib/pic16/libdev/pic18f4450.c:
	  removed manual SSPBUF workaround

	* device/non-free/lib/pic16/libdev/fake_sspbuf.c:
	  provide automatic SSPBUF workaround

	* device/lib/pic16/libsdcc/Makefile.in,